base/adservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.openshift.io/runtime: java
  name: adservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      containers:
      - env:
        - name: PORT
          value: "9555"
        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/adservice:v0.10.2
        name: server
        ports:
        - containerPort: 9555
        livenessProbe:
          initialDelaySeconds: 20
          grpc:
            port: 9555
        readinessProbe:
          initialDelaySeconds: 20
          grpc:
            port: 9555
        resources:
          limits: {cpu: 300m, memory: 300Mi}
          requests: {cpu: 200m, memory: 180Mi}
