base/cartservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"redis-cart"}]'
  labels:
    app.openshift.io/runtime: dotnet
  name: cartservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      containers:
      - env:
        - name: REDIS_ADDR
          value: redis-cart:6379
        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/cartservice:v0.10.2
        name: server
        ports:
        - containerPort: 7070
        livenessProbe:
          initialDelaySeconds: 15
          grpc:
            port: 7070
        readinessProbe:
          initialDelaySeconds: 15
          grpc:
            port: 7070
        resources:
          limits: {cpu: 300m, memory: 128Mi}
          requests: {cpu: 200m, memory: 64Mi}
