base/checkoutservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      containers:
      - name: server
        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/checkoutservice:v0.10.2
        resources:
          limits: {cpu: 200m, memory: 128Mi}
          requests: {cpu: 100m, memory: 64Mi}
