base/loadgenerator-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgenerator
  template:
    metadata:
      labels:
        app: loadgenerator
    spec:
      containers:
      - name: main
        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/loadgenerator:v0.10.2
