base/paymentservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
      - name: server
        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/paymentservice:v0.10.2
