base/currencyservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.openshift.io/runtime: nodejs
  name: currencyservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      labels:
        app: currencyservice
    spec:
      containers:
      - env:
        - name: PORT
          value: "7000"
        - name: DISABLE_PROFILER
          value: "1"
        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/currencyservice:v0.10.2
        name: server
        ports:
        - containerPort: 7000
          name: grpc
        livenessProbe:
          grpc:
            port: 7000
        readinessProbe:
          grpc:
            port: 7000
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [all]
          readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
spec:
  ports:
  - name: grpc
    port: 7000
    targetPort: 7000
  selector:
    app: currencyservice
