base/emailservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.openshift.io/runtime: python
  name: emailservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      containers:
      - env:
        - name: PORT
          value: "8080"
        - name: DISABLE_PROFILER
          value: "1"
        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/emailservice:v0.10.2
        name: server
        ports:
        - containerPort: 8080
        livenessProbe:
          grpc:
            port: 8080
        readinessProbe:
          grpc:
            port: 8080
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [all]
          readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
spec:
  ports:
  - name: grpc
    port: 5000
    targetPort: 8080
  selector:
    app: emailservice
