base/shippingservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.openshift.io/runtime: golang
  name: shippingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      labels:
        app: shippingservice
    spec:
      containers:
      - env:
        - name: PORT
          value: "50051"
        - name: DISABLE_PROFILER
          value: "1"
        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/shippingservice:v0.10.2
        name: server
        ports:
        - containerPort: 50051
        livenessProbe:
          grpc:
            port: 50051
        readinessProbe:
          grpc:
            port: 50051
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [all]
          readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
spec:
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
  selector:
    app: shippingservice
