base/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: frontend
    weight: 100
